# ethopy_package

./: 404.html  CONTRIBUTING.md  README.md  changelog.html  contributing.html  control.html  creating_custom_components.html  database_setup.html  dot_stimulus_example.html  faq.html  getting_started.html  gui.html  index.html  installation.html  local_conf.html  logging.html  match_port_example.html  mkdocs.yml  multi_port_behavior_example.html  nwb_docs.html  objects.inv  plugin.html  pyproject.toml  raspberry_pi.html  setup_configuration_idx.html  sitemap.xml  task_setup.html  troubleshooting.html  usage.html  visualizations.html
.github/workflows/: documentation.yml  draft-release.yml
API/: behavior.html  experiment.html  interface.html  logger.html  stimulus.html
API/behavior/: index.html
API/experiment/: index.html
API/interface/: index.html
API/logger/: index.html
API/stimulus/: index.html
Task/: index.html
behavior/: index.html
changelog/: index.html
contributing/: contributing.md  index.html
control/: index.html
creating_custom_components/: index.html
database/: index.html
database_schemas/: index.html
database_setup/: index.html
docs/: ProcessProxy_Overview.md  Task.md  contributing.md  control.md  creating_custom_components.md  database_schemas.md  database_setup.md  distributed_networking.md  dot_stimulus_example.md  getting_started.md  index.md  installation.md  local_conf.md  logging.md  match_port_example.md  multi_port_behavior_example.md  network_module_guide.md  nwb_docs.md  plugin.md  protocol.md  raspberry_pi.md  remote_interface.md  setup_configuration_idx.md  task_setup.md  troubleshooting.md
dot_stimulus_example/: index.html
ethopy/: run.py
ethopy/Experiments/: Calibrate.py  Passive.py
ethopy/Interfaces/: Arduino.py  Ball.py  Camera.py  DummyPorts.py  (+3 more)
experiment/: index.html
faq/: index.html
getting_started/: index.html
gui/: index.html
installation/: index.html
interface/: index.html
local_conf/: index.html
logger/: index.html
logging/: index.html
match_port_example/: index.html
multi_port_behavior_example/: index.html
nwb_docs/: index.html
plugin/: index.html
raspberry_pi/: index.html
search/: search_index.json
setup_configuration_idx/: index.html
stimulus/: index.html
task/: index.html  task.md
task_setup/: index.html
tests/: test_experiment.py  test_logger.py
troubleshooting/: index.html
usage/: index.html
visualizations/: index.html
(+71 files in other folders)
